ยัง generate ไม่ถูกแต่ใกล้เคียงแล้ว